[project]
name = "rl-hw-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.2.1",
    "numpy>=2.3.3",
    "pettingzoo>=1.25.0",
    "rich>=14.1.0",
    "shimmy>=2.0.0",
    "stable-baselines3[extra]>=2.7.0",
    "supersuit>=3.10.0",
    "torch>=2.8.0",
    "typer>=0.19.2",
]

[project.scripts]
rl-hw-01 = "rl_hw_01:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]
